 - new Spring.{Get,Set}ProjectileDamages similar to the above, for projectiles in flight.
 - new Spring.GetUICommands function to obtain a list of all UI commands (e.g. /luaui reload)
 - new VFS.CalculateHash function that calculates hash (in base64 form) of a given string (with md5 support initially)
 - new Spring.{Get,Set}{Unit,Feature}Mass functions
 - new Spring.SetFeatureMoveCtrl(featureID [, args]) to control if and how a feature should be moved by the engine
 - new Spring.SetFeatureFade(featureID, bool) to control whether a feature will fade or not when zoomed out.
 - new Spring.DeleteProjectile(projID) for silently removing projectiles (no explosion).

 - add callouts (see their Unit equivalents for documentation)
     Spring.{Get,Set}FeatureRotation
     Spring.{Get,Set}FeaturePieceCollisionVolumeData
     Spring.GetFeatureLastAttackedPiece
     Spring.GetFeaturePieceMap
     Spring.GetFeaturePieceList
     Spring.GetFeaturePieceInfo
     Spring.GetFeaturePiecePosition
     Spring.GetFeaturePieceDirection
     Spring.GetFeaturePiecePosDir
     Spring.GetFeaturePieceMatrix

     Spring.SetFeatureNoDraw
     Spring.GetFeatureNoDraw

     gl.FeatureRaw
     gl.FeatureMultMatrix
     gl.FeaturePiece
     gl.FeaturePieceMatrix
     gl.FeaturePieceMultMatrix

 - add Spring.FeatureRendering API; allows custom shaders (technically,
   materials) for features as its Spring.UnitRendering counterpart does
   for units
   note: the following two functions exist but are no-ops
     Spring.UnitRendering.SetFeatureLuaDraw
     Spring.FeatureRendering.SetUnitLuaDraw

 - add unsynced callout SetSkyBoxTexture(string texName) -> nil
   example usage: Spring.SetSkyBoxTexture("myskybox.dds")

 - add unsynced callout SetSunLighting(table params) -> nil
   It can be used to modify the following sun lighting parameters:
   {ground,unit}{Ambient,Sun,Specular}Color and specularExponent
   example usage: Spring.SetSunLighting({
    groundAmbientColor = {1, 0.1, 1},